# mql5-skills

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs-dev/: extraction.md  naming.md  skill-design.md  symbol-spec.md
jobs/246753/: ReportOptimizer-600xxxxx.xml  SPEC.md
jobs/246753/ReportTester-246753/: ReportTester-600xxxxx.html
jobs/250013/: 250013-job.md
jobs/ReportTester-250013/: ReportTester-600xxxxx.html
resources/: calendar-events.csv  random-user-agents.csv
resources/artical-22196-MetaQuotes/22196-attaches/: GetTodayEvents-S.mq5  ImportCalendarValidation-EA.mq5  ImportTesterLog.txt
resources/mql5.com-artical-22196-MetaQuotes/: .gitignore  README.md
resources/mql5.com-artical-22196-MetaQuotes/22196-attaches/: CalendarEventMonitor-EA.mq5
scripts/: extract.py
sitemaps/: robots.txt  sitemap_book_en.xml  sitemap_docs_en.xml
skills/mql5/: SKILL.md
skills/mql5/assets/: Anonymous.XAUUSD.M15.ini  calendar-events.csv
skills/mql5/assets/mql5.com-artical-22196-MetaQuotes/: README.md
skills/mql5/assets/mql5.com-artical-22196-MetaQuotes/22196-attaches/: ExportCalendarForTester-S.mq5  FullLiveLog.txt
skills/mql5/references/: quick-ref-mql5-economic-calendar.md
skills/mql5/references/book/: 0000-book.md
skills/mql5/references/book/00-intro/: 0001-intro.md  (+12 more)
skills/mql5/references/docs/: 0000-docs.md
skills/mql5/references/symbol-spec/: specs-USDJPY.csv  specs-XAUUSD.csv
skills/mql5/scripts/: mql5_helper.py  parse_mql_calendar_bin.py  parse_optimizer_report.py  parse_tester_report.py  verify_sl_tp_formulas.py
(+4430 files in other folders)
